started with ohg

--- a/deriving-internalonly.tex
+++ b/deriving-internalonly.tex
@@ -1266,10 +1266,10 @@ I directly exclude the possibility that Modern German headless relatives are der
 Jan hugs \tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc} \tsc{rp}.\tsc{an}.\tsc{acc} he likes\\
 `Jan hugs the man that he likes.'\label{ex:mg-den-wen}
 
-In \ref{ex:mg-den-wen}, the relative pronoun is the \tsc{wh}-pronoun \tit{wen} `\tsc{rp}.\tsc{an}.\tsc{acc}', and the light head is the \tsc{d}-pronoun \tit{den} `\tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc}'. For easy reference, I call this light-headed relative the \tit{den}-\tit{wen} relative.
+In \ref{ex:mg-den-wen}, the relative pronoun is the \tsc{wh}-pronoun \tit{wen} `\tsc{rp}.\tsc{an}.\tsc{acc}', and the light head is the \tsc{d}-pronoun \tit{den} `\tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc}'. For easy reference, I call this light-headed relative the \tit{den}-\tit{wen} relative and \tit{den} the regular light head.
 
-One hypothesis is that the demonstrative \tit{den} `\tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc}' is deleted from the light-headed relative in \ref{ex:mg-den-wen} and that the headless relative in \ref{ex:mg-wen} remains.\footnote{
-This is exactly what \citet{hanink2018} argues for. She claims that the feature content of the light head \tit{den} matches the feature content of the relative pronoun \tit{wen}. Therefore, the light head is by default deleted. Only if the light head carries an extra focus feature it surfaces.
+One hypothesis is that the regular light head \tit{den} `\tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc}' is deleted from the light-headed relative in \ref{ex:mg-den-wen} and that the headless relative in \ref{ex:mg-wen} remains.\footnote{
+This is exactly what \citet{hanink2018} argues for. She claims that the feature content of the regular light head \tit{den} matches the feature content of the relative pronoun \tit{wen}. Therefore, the light head is by default deleted. Only if the light head carries an extra focus feature it surfaces.
 }
 For easy reference, I call this headless relative the \tit{wen} relative.
 
@@ -1283,7 +1283,7 @@ I give two arguments against this hypothesis. First, in headless relatives the p
 Jan hugs \tsc{rp}.\tsc{an}.\tsc{acc} ever he likes\\
 `Jan hugs whoever he likes.'\label{ex:mg-wh-for-headless-ever}
 
-Light-headed relatives do not allow for this morpheme to be inserted, illustrated in \ref{ex:mg-wh-for-headed-ever}.
+Light-headed relatives do not allow for this phrase to be inserted, illustrated in \ref{ex:mg-wh-for-headed-ever}.
 
 \exg. *Jan unarmt den \tbf{wen} {\tbf{auch} \tbf{immer}} \tbf{er} \tbf{mag}.\\
 Jan hugs \tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc} \tsc{rp}.\tsc{an}.\tsc{acc} ever he likes\\
@@ -1334,14 +1334,14 @@ Jan hugs \tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc} \tsc{rp}.\tsc{an}.\tsc{acc} he lik
 Jan hugs \tsc{rp}.\tsc{an}.\tsc{acc} he likes\\
 `Jan hugs who he likes.'
 
-A universal-like interpretation is one in which Jan hugs everbody that he likes.
+A universal-like interpretation is one in which Jan hugs everybody that he likes.
 This interpretation is available for the \tit{wen} relative, but not for the \tit{den}-\tit{wen} relative.
 
 There are some indications that the universal-like interpretation of headless relatives is the main interpretation that should be accounted for.
 First, informants have reported to me that headless relatives with case mismatches become more acceptable in the universal-like interpretation compared to the definite-like interpretation.
 Second, \pgcitet{s̆imík2020}{4} notes that some languages do not easily allow for the definite-like interpretation of headless relatives with an \tit{ever}-morpheme. There is no language documented that does not allow for the universal-like interpretation, but does allow the definite-like interpretation.
 
-In sum, there are two arguments against the \tit{den}-\tit{wen} relative being the source of the \tit{wen} relative. In what follows, I show how the presence of \tit{den} leads to having only the definite-like interpretation. I suggest that the problem lies in the feature content of the light head \tit{den}. I point out how the feature content should be modified such that it is a suitable light head for a headless relative.
+In sum, there are two arguments against the \tit{den}-\tit{wen} relative being the source of the \tit{wen} relative. In what follows, I show how the presence of \tit{den} leads to having only the definite-like interpretation. I suggest that the problem lies in the feature content of the regular light head. I point out how the feature content should be modified such that it is a suitable light head for a headless relative.
 
 The light head in the \tit{den}-\tit{wen} relative is a demonstrative. A demonstrative refers back to a linguistic or extra-linguistic antecedent. Consider the context in \ref{ex:mg-context-def} again. The demonstrative \tit{den} in the \tit{den}-\tit{wen} relative refers back to the friend of Jan that he likes, and the construction is grammatical. Now consider the context in \ref{ex:mg-context-univ} again. In this case, there is no antecedent for the demonstrative \tit{den} to refer back to, and the structure is infelicitous.
 
@@ -1350,7 +1350,7 @@ I decompose demonstrative \tit{den} into different morphemes to investigate what
 So far, I established that the \tit{den}-\tit{wen} relative cannot be the source from which the headless relative is derived. Still, there must be some light-headed relative that is the source. I propose that the light head in the light-headed relative is even lighter than the head in the \tit{den}-\tit{wen} relative: it is an extra light head.
 
 I propose that the extra light head is the element that is left once the morpheme \tit{de} is absent. This is the morpheme that is the final consonant of the relative pronoun. I give the extra light-headed relative that the \tit{wen}-relative is derived from in \ref{ex:mg-real-base}. The brackets around the light head indicate that it is obligatorily deleted.\footnote{\label{ftn:florian}
-The light head and the extra light head I discuss resemble the strong and weak definite in \citet{schwarz2009}, at least morphologically (although my light head is always obligatorily deleted). \posscitet{schwarz2009} strong definite is anaphoric in nature, and the weak definite encodes uniqueness. I give an example of a strong definite in \ref{ex:mg-florian-strong}. The strong definite is \tit{dem} that precedes \tit{Freund} `friend'. It refers back to the linguistic antecedent \tit{einen Freund} `a friend'.
+The regular light head and the extra light head I discuss resemble the strong and weak definite in \citet{schwarz2009}, at least morphologically (although my extra light head is always obligatorily deleted). \posscitet{schwarz2009} strong definite is anaphoric in nature, and the weak definite encodes uniqueness. I give an example of a strong definite in \ref{ex:mg-florian-strong}. The strong definite is \tit{dem} that precedes \tit{Freund} `friend'. It refers back to the linguistic antecedent \tit{einen Freund} `a friend'.
 
 \exg. Hans hat heute einen Freund zum Essen mit nach Hause gebracht. Er hat uns vorher ein Foto von dem Freund gezeigt.\\
 Hans has today a friend {to the} dinner with to home brought he has us beforehand a photo of the\scsub{strong} friend shown\\
@@ -1366,7 +1366,7 @@ the burglar is luckily {by the\scsub{weak}} dog {chased away} been\\
 Armstrong flew as {first one} {to the\scsub{weak}} moon\\
 `Armstrong was the first one to fly to the moon.' \flushfill{Modern German, \pgcitealt{schwarz2009}{40}}\label{ex:mg-florian-weak-mond}
 
-The meaning of \posscitet{schwarz2009} strong definite seems similar to the meaning of the light head in the \tit{den}-\tit{wen} relative.
+The meaning of \posscitet{schwarz2009} strong definite seems similar to the meaning of the regular light head in the \tit{den}-\tit{wen} relative.
 I do not see right away how the extra light head in headless relatives could encode uniqueness. One possibility is that the feature content of his and my form differs slightly after all. Another possibility is that the fact that his form combines with a preposition and an overt nouns leads to a change in interpretation.
 }
 
@@ -1394,7 +1394,7 @@ Here the head of the relative clause is \tit{dem Haus} and the sentence has beco
 There seems to be a parallel between the examples in \ref{ex:mg-florian-fritz-m} and \ref{ex:mg-florian-fritz-dem} and the extra light head (see also footnote \ref{ftn:florian}). The morpheme \tit{m} in \tit{m Haus} could be the same \tit{m} as the extra light head, only lacking the overt noun.
 Just as \tit{m Haus}, \tit{m} cannot surface as the head of the relative clause. However, unlike \tit{m Haus}, \tit{m} is deleted.
 
-In the remainder of this section, I discuss the two extra light heads that I compare the internal syntax of in Section \ref{sec:comparing-mg}. They are the accusative animate and the dative animate, shown in \ref{ex:mg-lhs}.
+In the remainder of this section, I discuss the two extra light heads that I compare the internal syntax of in Section \ref{sec:comparing-mg}. As I noted before, these forms do not surface as light heads in a light-headed relative. They do surface as pronouns in the language. They are the accusative animate and the dative animate, shown in \ref{ex:mg-lhs}.
 
 \ex.\label{ex:mg-lhs}
 \ag. n\\
@@ -1865,6 +1865,8 @@ The inanimate accusative extra light head consists of a single morpheme (\tit{s}
 The extra light head (the \tsc{acc}P realized by \tit{s}) is formally contained in the relative pronoun (the \tsc{rel}P realized by \tit{wa-s}).
 Therefore, the extra light head can be deleted, and the surface pronoun is the relative pronoun that bears the external case: \tit{was}.
 }
+
+\phantom{x}
 
 \section{Summary}
 
