--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -1165,7 +1165,7 @@ I have suggested that headless relatives are derived from light-headed relatives
 
 In Chapter \ref{ch:the-basic-idea}, I suggested that light heads consist of at least two features: ϕ and \tsc{k}.
 In this section, I determine the exact feature content of the light head.
-As I suggested in Chapter \ref{ch:deriving-onlyinternal} for Modern German, I end up claiming that the phi and case features of the relative pronoun is the light head in headless relatives. I show the complete structure that I work towards in this section in \ref{ex:pol-elh}.
+As I suggested in Chapter \ref{ch:deriving-onlyinternal} for Modern German, I end up claiming that the phi and case features morpheme of the relative pronoun is the light head in headless relatives. I show the complete structure that I work towards in this section in \ref{ex:pol-elh}.
 
 % Crucially, the constituent structure in \ref{ex:pol-elh} is the same as in \ref{ex:simple-matching}. Recall from Chapter \ref{ch:deriving-onlyinternal} that in Modern German the extra light head spells out as a single constituent. The Polish extra light head consists of two constituents, as shown in \ref{ex:pol-elh}. This is the crucial difference between the two languages that leads them to be of different types in headless relatives.
 
@@ -1231,7 +1231,7 @@ Jan sings \tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc} \tsc{rp}.\tsc{an}.\tsc{acc} ever 
 `John sings what Mary sings.' \flushfill{Polish, \pgcitealt{citko2004}{116}}\label{ex:pol-headed-ever}
 
 just as for Modern German, I assume that the headless relative is not derived from an ungrammatical structure.\footnote{
-\citet{citko2004} takes the complementary distribution of \tit{kolwiek} `ever' and the light head to mean that they share the same syntactic position. I have nothing to say about the exact syntactic position of \tit{ever}, but in my account it cannot be the head of the relative clause, as this position is reserved for the extra light head. My reason for the incompatibility of \tit{ever} and the light head is that they are semantically incompatible.
+\citet{citko2004} takes the complementary distribution of \tit{kolwiek} `ever' and the regular light head to mean that they share the same syntactic position. I have nothing to say about the exact syntactic position of \tit{ever}, but in my account it cannot be the head of the relative clause, as this position is reserved for the extra light head. My reason for the incompatibility of \tit{ever} and the regular light head is that they are semantically incompatible.
 
 For concreteness, I assume \tit{ever} to be situated within the relative clause. Placing it in the main clause generates a different meaning, illustrated by the contrast in meaning between \ref{ex:cz-wh-ever} and \ref{ex:cz-ever-wh} in Czech.
 
@@ -1250,7 +1250,7 @@ The second argument against the existing light-headed relatives being the source
 just as in Modern German, Polish headless relatives can be analyzed as either universal or definite \pgcitep{citko2004}{103}.
 Light-headed relatives, such as the one in \ref{ex:pol-light-headed}, only have the definite interpretation.
 
-In the remainder of this section, I discuss the two extra light heads that I compare the internal syntax of in Section \ref{sec:comparing-polish}. These are the accusative animate and the dative animate, shown in \ref{ex:pol-elhs}.
+In the remainder of this section, I discuss the two extra light heads that I compare the internal syntax of in Section \ref{sec:comparing-polish}. As I noted before, these forms do not surface as light heads in a light-headed relative. They do also not surface anywhere else in the language. These are the accusative animate and the dative animate, shown in \ref{ex:pol-elhs}.
 % \footnote{
 % It is also possible that the strong pronoun is syncretic with the extra light head and that the extra light head is actually also spelled out as \tit{jego}/\tit{jemu}. This would mean that the strong extra light head consists of even more than two morphemes. For my proposal, it is important to show that the extra light head consists of at least two morphemes, one of which spells out case features. It works equally well when the non-case part of the structure actually consists of more one morpheme. I continue working out a proposal in which the extra light head is bimorphemic.
 % }
