--- a/fenna-files/abbreviations.sty
+++ b/fenna-files/abbreviations.sty
@@ -12,6 +12,12 @@
   tag = abbr
 }
 
+\DeclareAcronym{rlh}{
+  short = \tsc{rlh} ,
+  long  = regular light head ,
+  tag = abbr
+}
+
 \DeclareAcronym{lh}{
   short = \tsc{lh} ,
   long  = light head ,
