worked on dem and put two light heads everywhere

--- a/deriving-internalonly.tex
+++ b/deriving-internalonly.tex
@@ -312,8 +312,7 @@ Having discussed the number, gender and case features, only the pronominal featu
  `I help him reparing his bike.'
 
 This means that the forms also correspond to pronominal features.
-I follow \citet{harley2002} who claim that all pronouns contain the feature \tsc{ref}, because they are referential expressions.\footnote{
-
+I follow \citet{harley2002} who claim that all pronouns contain the feature \tsc{ref}, because they are referential expressions.\footnote{\label{ftn:mg-weak-pronoun}
 To be more precise, the final consonants correspond to the weak pronoun in Modern German. \citet{cardinaletti1994} split pronouns in three classes: strong pronouns, weak pronouns and clitics. Following the tests in \citet{cardinaletti1994} that distinguish the types from each other, the pronouns in \ref{ex:mg-weak} are neither strong pronouns nor clitics, and therefore, should be classified as weak pronouns.
 
 First, \tit{n} and \tit{m} are not strong pronouns because of how they behave under coordination and under focus.
@@ -602,7 +601,7 @@ For the position of the operator features (\tsc{wh} and \tsc{rel}) consider \ref
 \a.\label{ex:of-the-kids} of the children
 \b.\label{ex:of-which-kids} of which children
 
-The linear order in \ref{ex:of-the-kids} reflects the hierarchical ordering of \tsc{k} > \tsc{d} > \tsc{n}. \tit{Of} is namely an instance of \tsc{k}, \tsc{the} is an instance of \tsc{d}, and \tsc{child} is an instance of \tsc{n}.
+The linear order in \ref{ex:of-the-kids} reflects the hierarchical ordering of \tsc{k} > \tsc{d} > \tsc{n}. \tit{Of} is namely an instance of \tsc{k}, \tit{the} is an instance of \tsc{d}, and \tit{child} is an instance of \tsc{n}.
 \ref{ex:of-which-kids} shows that the order is the same if the definite is substituted by the \tsc{wh}-word \tit{which}, suggesting that the operator features are also positioned between \tsc{k} and \tsc{n}.
 Notice also that the plural morpheme \tit{-ren} appears more to the right, hence lower in the structure, than the operator features.
 Finally, I assume that the feature \tsc{rel} is hierarchy higher than \tsc{wh}.
@@ -1212,7 +1211,7 @@ I have suggested that headless relatives are derived from light-headed relatives
   ]
 \end{forest}
 
-In Chapter \ref{ch:the-basic-idea}, I suggested that light heads consist of at least two features: ϕ and \tsc{k}.
+In Chapter \ref{ch:the-basic-idea}, I suggested that languages have two possible light heads. Headless relatives in Modern German can only be derived from light-headed relatives that are headed by the light head that consists of the two features ϕ and \tsc{k}.
 In this section, I determine the exact feature content of the light head.
 I end up claiming that the phi and case feature portmanteau of the relative pronoun is the light head in headless relatives. I show the complete structure that I work towards in this section in \ref{ex:mg-lh}.
 
@@ -1242,9 +1241,9 @@ I end up claiming that the phi and case feature portmanteau of the relative pron
 Before I dive into the feature content of the light head, I first need to identify it, as it does not surface in headless relatives.
 I consider two kinds of light-headed relatives as the potential source of the headless relative.
 The first possible scenario is that the headless relative is derived from an existing light-headed relative, in which case the deletion of the light head would have to be optional.
-The second possible scenario is that the headless relative is derived from a light-headed relative that does not surfaces in Modern German, in which case the deletion of the light head would have to be obligatory.
+The second possible scenario is that the headless relative is derived from a light-headed relative that does not surface in Modern German, in which case the deletion of the light head would have to be obligatory.
 I consider the first scenario first, and I give two arguments against it.
-Then, to identify the exact input structure, I take the light head from the existing light-headed relative as a point of departure, and I modify it in such a way that it is appropriate as a light head for a headless relative.
+Then, to identify the exact input structure, I take the light head from the existing light-headed relative as a point of departure, and I modify it in such a way that it is appropriate as a light head for a headless relative in Modern German.
 
 I give an example of a Modern German light-headed relative in \ref{ex:mg-den-wen}.\footnote{
 Modern German also has another light-headed relative, in which the relative pronoun is the \tsc{d}-pronoun. I give an example in \ref{ex:mg-den-den}.
@@ -1266,10 +1265,10 @@ I directly exclude the possibility that Modern German headless relatives are der
 Jan hugs \tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc} \tsc{rp}.\tsc{an}.\tsc{acc} he likes\\
 `Jan hugs the man that he likes.'\label{ex:mg-den-wen}
 
-In \ref{ex:mg-den-wen}, the relative pronoun is the \tsc{wh}-pronoun \tit{wen} `\tsc{rp}.\tsc{an}.\tsc{acc}', and the light head is the \tsc{d}-pronoun \tit{den} `\tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc}'. For easy reference, I call this light-headed relative the \tit{den}-\tit{wen} relative and \tit{den} the regular light head.
+In \ref{ex:mg-den-wen}, the relative pronoun is the \tsc{wh}-pronoun \tit{wen} `\tsc{rp}.\tsc{an}.\tsc{acc}', and the light head is the \tsc{d}-pronoun \tit{den} `\tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc}'. For easy reference, I call this light-headed relative the \tit{den}-\tit{wen} relative.
 
-One hypothesis is that the regular light head \tit{den} `\tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc}' is deleted from the light-headed relative in \ref{ex:mg-den-wen} and that the headless relative in \ref{ex:mg-wen} remains.\footnote{
-This is exactly what \citet{hanink2018} argues for. She claims that the feature content of the regular light head \tit{den} matches the feature content of the relative pronoun \tit{wen}. Therefore, the light head is by default deleted. Only if the light head carries an extra focus feature it surfaces.
+One hypothesis is that the demonstrative \tit{den} `\tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc}' is deleted from the light-headed relative in \ref{ex:mg-den-wen} and that the headless relative in \ref{ex:mg-wen} remains.\footnote{
+This is exactly what \citet{hanink2018} argues for. She claims that the feature content of the demonstrative \tit{den} matches the feature content of the relative pronoun \tit{wen}. Therefore, the light head is by default deleted. Only if the light head carries an extra focus feature it surfaces.
 }
 For easy reference, I call this headless relative the \tit{wen} relative.
 
@@ -1341,7 +1340,7 @@ There are some indications that the universal-like interpretation of headless re
 First, informants have reported to me that headless relatives with case mismatches become more acceptable in the universal-like interpretation compared to the definite-like interpretation.
 Second, \pgcitet{s̆imík2020}{4} notes that some languages do not easily allow for the definite-like interpretation of headless relatives with an \tit{ever}-morpheme. There is no language documented that does not allow for the universal-like interpretation, but does allow the definite-like interpretation.
 
-In sum, there are two arguments against the \tit{den}-\tit{wen} relative being the source of the \tit{wen} relative. In what follows, I show how the presence of \tit{den} leads to having only the definite-like interpretation. I suggest that the problem lies in the feature content of the regular light head. I point out how the feature content should be modified such that it is a suitable light head for a headless relative.
+In sum, there are two arguments against the \tit{den}-\tit{wen} relative being the source of the \tit{wen} relative. In what follows, I show how the presence of \tit{den} leads to having only the definite-like interpretation. I suggest that the problem lies in the feature content of the demonstrative. I point out how the feature content should be modified such that it is a suitable light head for a headless relative.
 
 The light head in the \tit{den}-\tit{wen} relative is a demonstrative. A demonstrative refers back to a linguistic or extra-linguistic antecedent. Consider the context in \ref{ex:mg-context-def} again. The demonstrative \tit{den} in the \tit{den}-\tit{wen} relative refers back to the friend of Jan that he likes, and the construction is grammatical. Now consider the context in \ref{ex:mg-context-univ} again. In this case, there is no antecedent for the demonstrative \tit{den} to refer back to, and the structure is infelicitous.
 
@@ -1350,7 +1349,7 @@ I decompose demonstrative \tit{den} into different morphemes to investigate what
 So far, I established that the \tit{den}-\tit{wen} relative cannot be the source from which the headless relative is derived. Still, there must be some light-headed relative that is the source. I propose that the light head in the light-headed relative is even lighter than the head in the \tit{den}-\tit{wen} relative: it is an extra light head.
 
 I propose that the extra light head is the element that is left once the morpheme \tit{de} is absent. This is the morpheme that is the final consonant of the relative pronoun. I give the extra light-headed relative that the \tit{wen}-relative is derived from in \ref{ex:mg-real-base}. The brackets around the light head indicate that it is obligatorily deleted.\footnote{\label{ftn:florian}
-The regular light head and the extra light head I discuss resemble the strong and weak definite in \citet{schwarz2009}, at least morphologically (although my extra light head is always obligatorily deleted). \posscitet{schwarz2009} strong definite is anaphoric in nature, and the weak definite encodes uniqueness. I give an example of a strong definite in \ref{ex:mg-florian-strong}. The strong definite is \tit{dem} that precedes \tit{Freund} `friend'. It refers back to the linguistic antecedent \tit{einen Freund} `a friend'.
+The demonstrative and the extra light head I discuss resemble the strong and weak definite in \citet{schwarz2009}, at least morphologically (although my extra light head is always obligatorily deleted). \posscitet{schwarz2009} strong definite is anaphoric in nature, and the weak definite encodes uniqueness. I give an example of a strong definite in \ref{ex:mg-florian-strong}. The strong definite is \tit{dem} that precedes \tit{Freund} `friend'. It refers back to the linguistic antecedent \tit{einen Freund} `a friend'.
 
 \exg. Hans hat heute einen Freund zum Essen mit nach Hause gebracht. Er hat uns vorher ein Foto von dem Freund gezeigt.\\
 Hans has today a friend {to the} dinner with to home brought he has us beforehand a photo of the\scsub{strong} friend shown\\
@@ -1366,7 +1365,7 @@ the burglar is luckily {by the\scsub{weak}} dog {chased away} been\\
 Armstrong flew as {first one} {to the\scsub{weak}} moon\\
 `Armstrong was the first one to fly to the moon.' \flushfill{Modern German, \pgcitealt{schwarz2009}{40}}\label{ex:mg-florian-weak-mond}
 
-The meaning of \posscitet{schwarz2009} strong definite seems similar to the meaning of the regular light head in the \tit{den}-\tit{wen} relative.
+The meaning of \posscitet{schwarz2009} strong definite seems similar to the meaning of the demonstrative in the \tit{den}-\tit{wen} relative.
 I do not see right away how the extra light head in headless relatives could encode uniqueness. One possibility is that the feature content of his and my form differs slightly after all. Another possibility is that the fact that his form combines with a preposition and an overt nouns leads to a change in interpretation.
 }
 
@@ -1394,13 +1393,17 @@ Here the head of the relative clause is \tit{dem Haus} and the sentence has beco
 There seems to be a parallel between the examples in \ref{ex:mg-florian-fritz-m} and \ref{ex:mg-florian-fritz-dem} and the extra light head (see also footnote \ref{ftn:florian}). The morpheme \tit{m} in \tit{m Haus} could be the same \tit{m} as the extra light head, only lacking the overt noun.
 Just as \tit{m Haus}, \tit{m} cannot surface as the head of the relative clause. However, unlike \tit{m Haus}, \tit{m} is deleted.
 
-In the remainder of this section, I discuss the two extra light heads that I compare the internal syntax of in Section \ref{sec:comparing-mg}. As I noted before, these forms do not surface as light heads in a light-headed relative. They do surface as pronouns in the language. They are the accusative animate and the dative animate, shown in \ref{ex:mg-lhs}.
+In the remainder of this section, I discuss the two extra light heads that I compare the internal syntax of in Section \ref{sec:comparing-mg}. These are the accusative animate and the dative animate, shown in \ref{ex:mg-lhs}.\footnote{
+Again, for reasons of space, I do not discuss the nominative form. I assume its analysis is identical to the one I propose for the accusative and the dative.
+}
 
 \ex.\label{ex:mg-lhs}
 \ag. n\\
  \tsc{elh}.\tsc{an}.\tsc{acc}\\
 \bg. m\\
  \tsc{elh}.\tsc{an}.\tsc{dat}\\
+
+As I noted before, these forms do not surface as light heads in a light-headed relative. They do surface as pronouns in the language.
 
 In Chapter \ref{ch:the-basic-idea}, I suggested that the relative pronoun contains at least one feature more than the extra light head. In my proposal, it is actually two features, namely \tsc{wh} and \tsc{rel}. This leaves the functional sequence for the extra light head as shown in \ref{ex:fseq-elh}.
 
